# postgres-operator-examples

./: .drone.yml  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  PLAN_UPGRADE_6.0.0.md  README.md  encrypt_password.py  gen_config.py  help.md  hooks.Dockerfile  push_and_tag.sh  pyproject.toml  regcred_template.sh  temp.json  upgrade.yaml  upload_helm_charts.sh
.apolo/: applications.yaml
.apolo/tests/: conftest.py
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: auto-pr.yml  ci.yaml  release.yml  review-label.yml  stale.yml  test.yaml
.harness/: postgresoperatorexamples.yaml  trigger.yaml
helm/app/: .gitignore  Chart.yaml  values.yaml
helm/install/: .gitattributes  Chart.yaml  values.yaml
helm/monitoring/: Chart.yaml  README.md  values.yaml
helm/pgvector/: values.yaml
helm/postgres/: .gitignore  Chart.yaml  values-default-template.yaml  values.yaml
kustomize/affinity/: README.md  postgrescluster.yaml
kustomize/argocd/: cleanup.sh  demo-apps-dev.yaml  demo-apps-prod.yaml
kustomize/argocd_cleanup/: demo-apps-dev.yaml  demo-apps-monitoring.yaml  demo-apps-test.yaml  kustomization.yaml
kustomize/azure/: .gitignore  azure.conf.example  kustomization.yaml  postgres.yaml
kustomize/certmanager/: README.md
kustomize/cn-accounts/: ingress.yaml  postgres.yaml
kustomize/cn-accounts-backup/: postgres.yaml
kustomize/cn-ch-mattermost/: kustomization.yaml  mm-postgres.yaml
kustomize/cn-keycloak/: postgres.yaml
kustomize/cn-lms/: postgres.yaml
kustomize/cn-lms-dev/: postgres.yaml  upgrade.yaml
kustomize/cn-lms-dev-backup/: kustomization.yaml  postgres.yaml  recovery-storage.yaml
kustomize/cn-lms-prod/: postgres.yaml
kustomize/cn-mattermost/: cn-postgres.yaml  kustomization.yaml  postgres.yaml
kustomize/cn-mixeway-flow/: kustomization.yaml  postgres.yaml
kustomize/dop-320/: ha-postgres.yaml  kustomization.yaml
kustomize/dop-320-metrics/: ha-postgres.yaml
kustomize/gcs/: .gitignore  gcs.conf  kustomization.yaml  postgres.yaml
kustomize/gitlab-prod/: postgres.yaml
kustomize/high-availability/: ha-postgres.yaml  kustomization.yaml
kustomize/install/: LICENSE.txt  kustomization.yaml
kustomize/keycloak/: keycloak.yaml  kustomization.yaml  postgres.yaml
kustomize/keycloak-prod/: postgres.yaml
kustomize/mixeway-flow/: postgres.yaml
kustomize/mm-mattermost/: mm-postgres.yaml
kustomize/monitoring/: README.md  alertmanager-config.yaml  alertmanager-rules-config.yaml  deploy-grafana.yaml  (+11 more)
requirements/: base.txt
(+185 files in other folders)
